# python

./: LICENSE  README.md
01-python-Basics/01-variable/: main.py
01-python-Basics/02-arithmetic/: main.py
01-python-Basics/03-relational operator/: main.py
01-python-Basics/04-logical operator/: main.py
01-python-Basics/05-strings/: main.py
01-python-Basics/06-conditional Ssatements/: main.py
01-python-Basics/07-switch case statement/: main.py
01-python-Basics/08-complete-python/: main.py
02-virtual-envoirment/01-practice/: readme.md  requirement.txt
02-virtual-envoirment/02-fastapi/: main.py  readme.md  requirement.txt
03-fastapi-app/: README.md  main.py  pyproject.toml
