[project]
name = "03-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
